--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Courses - Mentor Bootstrap Template</title>
+  <title>Educandário Jesus Menino</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,55 +40,30 @@
 
 <body>
 
-      <!-- ======= Header ======= -->
-      <header id="header" class="fixed-top">
-        <div class="container d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html">Jesus Menino</a></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-  
-          <nav class="nav-menu d-none d-lg-block">
-            <ul>
-              <li><a href="index.html">Início</a></li>
-              <!-- Home -->
-              <li><a href="about.html">Sobre Nós</a></li>
-              <!-- About -->
-              <li class="active"><a href="courses.html">Níveis de Ensino</a></li>
-              <!-- Courses -->
-              <li><a href="trainers.html">Espaços</a></li>
-              <!-- Trainers -->
-              <li><a href="events.html">Regimento Escolar</a></li>
-              <!-- Events -->
-              <!-- <li><a href="pricing.html">Texto para Adicionar</a></li> -->
-              <!-- Pricing -->
-              <!-- <li class="drop-down">
-                <a href="">Texto para Adicionar</a>
-                <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li class="drop-down">
-                    <a href="#">Deep Drop Down</a>
-                    <ul>
-                      <li><a href="#">Deep Drop Down 1</a></li>
-                      <li><a href="#">Deep Drop Down 2</a></li>
-                      <li><a href="#">Deep Drop Down 3</a></li>
-                      <li><a href="#">Deep Drop Down 4</a></li>
-                      <li><a href="#">Deep Drop Down 5</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Drop Down 2</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
-                </ul>
-              </li> -->
-              <li><a href="contact.html">Fale Conosco</a></li>
-            </ul>
-          </nav>
-          <!-- .nav-menu -->
-  
-          <a href="courses.html" class="get-started-btn">Get Started</a>
-        </div>
-      </header>
-      <!-- End Header -->
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center">
+      <!-- <h1 class="logo mr-auto"><a href="index.html">Jesus Menino</a></h1> -->
+      <a href="index.html" class="logo mr-auto"><img src="assets/img/LOGO-EJM-AZUL OK.png" alt="" class="img-fluid" />
+        EJM
+      </a>
+
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="about.html">Sobre Nós</a></li>
+          <li class="active"><a href="courses.html">Espaços</a></li>
+          <li><a href="trainers.html">Nossa Equipe</a></li>
+          <li><a href="events.html">Regimento Escolar</a></li>
+          <li><a href="contact.html">Contato</a></li>
+        </ul>
+      </nav>
+
+      <a href="https://api.whatsapp.com/send?phone=558496761212" class="get-started-btn" target="_blank"> <i
+          class="bx bxl-whatsapp"></i>Whatsapp</a>
+    </div>
+  </header>
+  <!-- End Header -->
 
   <main id="main" data-aos="fade-in">
 
@@ -94,7 +71,8 @@
     <div class="breadcrumbs">
       <div class="container">
         <h2>Courses</h2>
-        <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+        <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit
+          quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -114,7 +92,8 @@
                 </div>
 
                 <h3><a href="course-details.html">Website Design</a></h3>
-                <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
+                <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem
+                  tempore.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
@@ -140,7 +119,8 @@
                 </div>
 
                 <h3><a href="course-details.html">Search Engine Optimization</a></h3>
-                <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
+                <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem
+                  tempore.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
@@ -166,7 +146,8 @@
                 </div>
 
                 <h3><a href="course-details.html">Copywriting</a></h3>
-                <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
+                <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem
+                  tempore.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
